# pylibsrtp

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tests.py
.appveyor/: build-libsrtp.bat
.github/workflows/: tests.yml
.travis/: build-libsrtp  install  script
docs/: Makefile  api.rst  conf.py  index.rst
libsrtp/: __init__.py
pylibsrtp/: __init__.py  _binding.py  tests.py
scripts/: build-libsrtp  build-libsrtp.bat  build-libsrtp.py
src/: build_srtp.py
src/_cffi_src/: build_srtp.py
src/pylibsrtp/: __init__.py  about.py
tests/: test_session.py
