[build-system]
requires = ["cffi>=1.0.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylibsrtp"
description = "Python wrapper around the libsrtp library"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Jeremy Lainé", email = "jeremy.laine@m4x.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cffi>=1.0.0"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.2.2",
]

[project.urls]
homepage = "https://github.com/aiortc/pylibsrtp"
documentation = "https://pylibsrtp.readthedocs.io/"

[tool.coverage.run]
source = ["pylibsrtp"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]

[tool.setuptools.dynamic]
version = {attr = "pylibsrtp.__version__"}

[tool.setuptools.packages.find]
exclude = ["_cffi_src"]
where = ["src"]
